--- a/icingaexchange.yml
+++ b/icingaexchange.yml
@@ -12,7 +12,7 @@ releases:
     description: "0.03 Release"
     files: 
       - 
-        name: check_bgp.py
+        name: check_bgp.pl
         url: "https://github.com/nistorj/monitoring-plugins/blob/master/check_bgp.pl"
         description: "Plugin to monitor BGP neighbour status and/or prefix count"
         checksum: 743dbf861481eaaf7c040ea7342e627e
